--- a/assets/css/home/home-style.css
+++ b/assets/css/home/home-style.css
@@ -4,9 +4,10 @@
 a{
     color: #497aa0;
 }
-.banner-img-wrap, .banner-overlay, #intro-row, .banner{
+.banner-img-wrap, .banner-overlay, #intro-row, .banner, .banner-overlay2{
     width:100%;
     height: 80vh;
+    min-height: 700px;
 }
 .banner-img-wrap{
     position: absolute;
@@ -19,14 +20,25 @@ a{
 }
 .banner-overlay{
     position: absolute;
-    background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 80%);;
+    background: linear-gradient(0deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0.7) 100%);;
     opacity: 1;
-
+}
+.banner-overlay2{
+    position: absolute;
+    background: linear-gradient(0deg, #497aa055 0%, rgba(255,255,255,0.4) 100%);;
+    opacity: 1;
 }
 
 #intro-row{
     position: absolute;
     z-index: 2;
+    padding: 20px 10%;
+}
+
+#intro-desc{
+    background: #497aa0dd;
+    padding: 20px;
+    color: #fff;
 }
 .page-row-1{
     position: relative;
