--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -46,6 +46,9 @@
     p.intro {
         font-size: 12px;
     }
+    .about ul{
+        font-size: 14px;
+    }
     img.diagram{
         padding:0;
     }
