--- a/assets/css/home/home-style.css
+++ b/assets/css/home/home-style.css
@@ -6,6 +6,9 @@ a{
     width:100%;
     height: 80vh;
     min-height: 700px;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 .banner{
     position: relative;
