--- a/assets/css/home/home-style.css
+++ b/assets/css/home/home-style.css
@@ -1,6 +1,6 @@
 
 a{
-    color: #497aa0;
+    color: #8ec7c6;
 }
 .banner-img-wrap, .banner-overlay, #intro-row, .banner, .banner-overlay2{
     width:100%;
@@ -22,13 +22,13 @@ a{
     background: #9da0a166;
     opacity: 1;
     background-blend-mode: multiply;
-    background-image: url("../../img/home-banner.jpg");
+    background-image: url("../../img/banner3.jpeg");
     background-size: cover;
     background-position: 50% 70%;
 }
 .banner-overlay{
     position: absolute;
-    background: linear-gradient(0deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0.7) 100%);;
+    background: linear-gradient(0deg, rgba(255,255,255,0.2) 0%, rgba(19,110,143,0.5) 60%);;
     opacity: 1;
 }
 .banner-overlay2{
@@ -41,10 +41,11 @@ a{
     position: absolute;
     z-index: 2;
     padding: 20px 10%;
+    color:#fff
 }
 
 #intro-desc{
-    background: #497aa0dd;
+    background: #136e8faa;
     padding: 20px;
     color: #fff;
 }
@@ -78,7 +79,7 @@ a{
 }
 .structure li{
     padding: 10px 20px;
-    background: #497aa010;
+    background: #8ec7c610;
     max-width: 900px;
     margin: auto;
 }
