--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -53,12 +53,12 @@
         padding:0;
     }
 
-    .banner{
+    /* .banner{
         height: auto;
     }
     #intro-row{
         height: auto;
-    }
+    } */
     
 }
 
