--- a/assets/css/home/home-style.css
+++ b/assets/css/home/home-style.css
@@ -4,8 +4,8 @@ a{
 }
 .banner-img-wrap, .banner-overlay, #intro-row, .banner, .banner-overlay2{
     width:100%;
-    height: 80vh;
-    min-height: 700px;
+    height: 70vh;
+    /* min-height: 700px; */
     position: absolute;
     top: 0;
     left: 0;
