--- a/assets/css/home/home-style.css
+++ b/assets/css/home/home-style.css
@@ -1,6 +1,6 @@
 
 a{
-    color: #8ec7c6;
+    color: #60B8B3;
 }
 .banner-img-wrap, .banner-overlay, #intro-row, .banner, .banner-overlay2{
     width:100%;
@@ -79,7 +79,7 @@ a{
 }
 .structure li{
     padding: 10px 20px;
-    background: #8ec7c610;
+    background: #60B8B310;
     max-width: 900px;
     margin: auto;
 }
