--- a/assets/css/home/home-style.css
+++ b/assets/css/home/home-style.css
@@ -88,10 +88,42 @@ a{
     background: #497aa030;
 }
 
-.story{
-    /* height: 3000px; */
-    padding: 30px 10%;
+
+
+.flourish-credit{
+    opacity: 0;
+    /* color: red; */
 }
-.story img {
-    max-width: 100%;
+
+.overview-ad{
+    padding: 50px;
+    background: radial-gradient(circle, rgba(38,75,88,1) 0%, rgba(0,63,92,0) 75%);
+
+}
+.overview-link{
+    margin:auto;
+    width: 100px;
+    text-align: center;
+    color: #fff;
+    
+}
+.overview-link h3{
+    font-weight: 100;
+    background-color: #60B8B3aa;
+    border-radius: 10px;
+    padding: 20px 10px;
+    font-size: 18px;
+    text-transform: uppercase;
+    max-width:300px;
+    width: 100%;
+    min-width: 200px;
+    margin: auto;
+
+}
+.overview-link:hover{
+    color: #fff;
+    text-decoration: none;
+}
+.overview-link:hover h3{
+    background-color: #60B8B3;
 }
