--- a/assets/css/home/home-style.css
+++ b/assets/css/home/home-style.css
@@ -98,8 +98,11 @@ a{
 
 .overview-ad{
     padding: 50px;
-    background: radial-gradient(circle, rgba(38,75,88,1) 0%, rgba(0,63,92,0) 75%);
+    /* background: radial-gradient(circle, rgba(38,75,88,1) 0%, rgba(0,63,92,0) 75%); */
 
+}
+.overview-ad img{
+    width: 100%;
 }
 .overview-link{
     margin:auto;
