--- a/assets/css/home/home-responsive.css
+++ b/assets/css/home/home-responsive.css
@@ -1,8 +1,32 @@
+@media only screen and (max-width: 1440px) {
+    .row{
+        padding: 20px 10%;
+    }
+}
+
+@media only screen and (max-width: 1240px) {
+    
+    
+}
+
+
 @media only screen and (max-width: 992px) {
     #intro-row{
         position: relative;
     }
+    .row{
+        padding: 10px 5%;
+    }
     .init-card{
         height: 300px;
     }
+}
+
+@media only screen and (max-width: 600px) {
+
+}
+
+
+@media only screen and (max-width: 400px) {
+
 }
