--- a/assets/css/home/home-responsive.css
+++ b/assets/css/home/home-responsive.css
@@ -22,10 +22,12 @@
     }
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 768px) {
     .init-card{
         position: relative;
-        height: 200px;
+    }
+    .init-wrap a{
+        width:100%;
     }
 
 }
