--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -39,6 +39,7 @@ h1.page-title{
     text-shadow: 0 0 1px #fff;
     border-left: 3px solid #AC2A36;
     padding: 0 15px;
+    padding-top: 8px;
     /* font-weight: 500; */
 }
 h1.page-title-noBanner{
@@ -48,6 +49,7 @@ h1.page-title-noBanner{
     text-shadow: 0 0 1px #fff;
     border-left: 3px solid #AC2A36;
     padding: 0 15px;
+    padding-top: 8px;
     margin-top: 5%;
     width: fit-content;
 }
@@ -114,14 +116,14 @@ h1{
     line-height: 1.1em;
 }
 h2{
-    font-weight: 900;
+    font-weight: 700;
 }
 h3{
     /* font-family: 'halyard-display',sans-serif; */
     font-weight: 500;
 }
 p{
-    font-weight: 200;
+    font-weight: 400;
 }
 #nav-icon{
     width: 250px;
