--- a/assets/css/home/home-style.css
+++ b/assets/css/home/home-style.css
@@ -3,7 +3,7 @@ a{
     color: #60B8B3;
 }
 .pre-banner{
-    background: #60B8B3;
+    background: #264B58;
     padding: 10px;
     text-align: center;
 }
