--- a/assets/css/webinars/webinars.css
+++ b/assets/css/webinars/webinars.css
@@ -14,6 +14,8 @@
 }
 .series a{
     display: flex;
+    width: 50%;
+    padding: 0 10px;
 }
 .series a p{
     padding: 10px 10px;
@@ -22,6 +24,10 @@
     /* max-width: 300px; */
 }
 .actions{
+    display: flex;
+    flex-wrap: wrap;
+}
+.buttons{
     display: flex;
     flex-wrap: wrap;
 }
